accord-ingress/accord-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: accord-web
  namespace: accord
spec:
  rules:
  - host: accord.uvarc.io
    http:
      paths:
      - path: /
        backend:
          serviceName: accord-web-service
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: accord-service
  namespace: accord
spec:
  rules:
  - host: accord.uvarc.io
    http:
      paths:
      - path: /accord/api/
        backend:
          serviceName: accord-service-service
          servicePort: 80
